<resources>
    <string name="app_name">快翔</string>

    <!-- problem report menu -->
    <string name="menu_action_report">Problem Report</string>

    <!-- the first time start-->
    <string name="first_time_title">改头换面哈哈哈嗝</string>
    <string name="first_time_content">改头换面哈哈哈嗝</string>
    <string name="first_time_agree">就它了！</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_item_settings">设置</string>

    <!-- settings -->
    <!-- client info settings -->
    <string name="menu_action_settings">Settings</string>
    <string name="general_setting">一般设置</string>
    <string name="client_nick_name_label">改名换姓</string>
    <string name="client_nick_name_key" translatable="false">nick_name</string>
    <string name="client_nick_name_default_value" translatable="false">点这里换个称号</string>
    <!-- advanced settings-->
    <string name="open_sync_service_label">点这里从网络同步数据</string>
    <string name="open_sync_service_key">open_sync_service</string>
    <string name="advanced_setting">高级设置</string>

    <!-- client info display -->
    <string name="client_current_level_label">当前等级：</string>
    <string name="client_current_level_key" translatable="false">current_level</string>
    <string name="client_current_level_default_value" translatable="false">10</string>

    <string name="client_current_exp_label">经验值</string>
    <string name="client_current_exp_key" translatable="false">exp</string>
    <string name="client_current_exp_default_value" translatable="false">6666</string>

    <!-- content provider -->
    <string name="content_authority">com.lzjlxebr.hurrypush</string>

    <!-- today -->
    <string name="today_load_error">Load error,go to fix bug.</string>
    <string name="load_error_msg">载入完成，但似乎没有数据</string>
    <string name="tv_today_survey_todo_title">调查完成情况</string>
    <string name="tv_today_survey_todo_content">尚无未完成的调查，继续保持！</string>
    <string name="tv_today_todo_title">今日排便情况</string>
    <string name="tv_today_todo_content">今日尚未进行排便！</string>

    <!-- achievement -->
    <string name="achievement_load_error">Load error,go to fix bug.</string>
    <string name="achievement_progress">完成度：</string>

    <!-- statistics -->
    <string name="statistics_load_error">Load error,go to fix bug.</string>
    <string name="defecation_desc_title">详细情况</string>
    <!-- notification -->
    <string name="channel_name">liuxi520</string>
    <string name="channel_description">Just A Notification Channel</string>

    <!-- fab -->
    <string name="floating_action_go_timer">开始我的飞翔吧</string>
    <string name="title_activity_start_fly">你在飞翔哦</string>
    <string name="floating_action_go_survey">结束我的飞翔，进入统计页面</string>

    <!-- survey -->
    <string name="title_activity_start_survey">做个调查吧</string>
    <string name="card_title1">第一步</string>
    <string name="card_title2">第二步</string>
    <string name="card_title3">第三步</string>
    <string name="card_title4">最后一步</string>
    <string name="card_title5">您本次排便结果如下</string>
    <string name="card_content1">你的便便闻起来是什么味道？</string>
    <string name="card_content2">你的便便拉的顺畅吗？</string>
    <string name="card_content3">你的便便黏稠度怎么样？</string>
    <string name="card_content4">前面的内容如无需更改即可提交。</string>
    <string name="card_content5"> </string>

    <!-- timer inner notification -->
    <string name="done">DONE</string>
    <string name="timer_inner_notification_title">请注意你的飞翔时间</string>
    <string name="timer_inner_notification_body_three_mins">你飞翔超过3分钟了</string>
    <string name="timer_inner_notification_body_five_mins">你飞翔超过5分钟了</string>
    <string name="timer_inner_notification_body_seven_mins">你飞翔超过7分钟了</string>
    <string name="timer_inner_notification_body_ten_mins">你飞翔超过10分钟了</string>
    <string name="timer_inner_notification_body_thirty_mins">你飞翔超过半小时了</string>
    <string name="timer_inner_notification_body_one_hour">你飞翔超过一个小时了，计时器已自动停止</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>

    <string-array name="week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
