<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lzjlxebr.hurrypush.ui.base.MainActivity">

    <ProgressBar
        android:id="@+id/today_load_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:theme="@style/PreferenceThemeOverlay.v14.Material"
        android:visibility="visible" />

    <TextView
        android:id="@+id/today_load_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/today_load_error"
        android:visibility="invisible" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/today_card_1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/achi_card_magin_small"
        android:layout_marginLeft="@dimen/achi_card_magin_small"
        android:layout_marginRight="@dimen/achi_card_magin_small"
        android:layout_marginStart="@dimen/achi_card_magin_small"
        android:layout_marginTop="@dimen/achi_card_magin_small"
        app:cardUseCompatPadding="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:scaleX="29"
                android:scaleY="1.4"
                android:src="@drawable/ic_bookmark_black" />

            <ImageView
                android:id="@+id/iv_today_sruvey"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="left"
                android:layout_margin="3dp"
                android:src="@drawable/ic_survey_todo" />

            <TextView
                android:id="@+id/tv_today_survey_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_today_sruvey"
                android:gravity="center_vertical"
                android:text="@string/tv_today_survey_todo_title"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_today_survey_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_today_sruvey"
                android:text="@string/tv_today_survey_todo_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/today_card_1"
        android:layout_marginEnd="@dimen/achi_card_magin_small"
        android:layout_marginLeft="@dimen/achi_card_magin_small"
        android:layout_marginRight="@dimen/achi_card_magin_small"
        android:layout_marginStart="@dimen/achi_card_magin_small"
        android:layout_marginTop="@dimen/achi_card_magin_small"
        app:cardUseCompatPadding="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:scaleX="29"
                android:scaleY="1.4"
                android:src="@drawable/ic_bookmark_black" />

            <ImageView
                android:id="@+id/iv_today"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="left"
                android:layout_margin="3dp"
                android:src="@drawable/ic_survey_todo" />

            <TextView
                android:id="@+id/tv_today_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_today"
                android:gravity="center_vertical"
                android:text="@string/tv_today_todo_title"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_today_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_today"
                android:text="@string/tv_today_todo_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>