<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/client_nick_name_label"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nav_header_nick_name"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/client_nick_name_default_value" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing">

        <TextView
            android:id="@+id/nav_header_current_level"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/achi_card_magin_middle"
            android:layout_marginRight="@dimen/achi_card_magin_middle"
            android:text="@string/client_current_level_default_value"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/nav_header_current_exp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:scaleY="2.0"
            android:layout_weight="1"
            android:max="6000"
            android:progress="1000"
            android:theme="@style/AppTheme.NoActionBar" />

        <TextView
            android:id="@+id/nav_header_current_level_rate"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/achi_card_magin_middle"
            android:layout_marginStart="@dimen/achi_card_magin_middle"
            android:text="0.0%"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
